# AwesomeBot

./: .dockerignore  .env.dev  .env.prod  .gitignore  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  pyproject.toml
.docker/prod/: docker-compose.yml
.docker/prod/volumes/nonebot/data/: config.hjson
scripts/go-cqhttp-config/: config.hjson  device.json
src/plugins/nonebot_plugin_bbdc/: __init__.py  config.py  data_source.py
src/plugins/nonebot_plugin_status/: README.md  __init__.py  config.py  data_source.py  pyproject.toml
tests/: selenium_test.py
